# mcp-test

./: .gitignore  CLAUDE.md  README.md  bootstrap.sh  copilot_selector_wrapper.sh  get_copilots.py  install.sh  main.py  pyproject.toml  select_copilots.py  select_copilots_interactive.py  select_copilots_simple.py  server.py  test_copilots.json
lib/: README.md  common.sh  copilots.sh  deps.sh  project.sh
scripts/: validate_connection.py
src/answerrocket_mcp/: __main__.py  models.py  server.py  utils.py
